<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/world"
        style="@style/dialogButton"
        android:text="@string/all_world" />

    <Button
        android:id="@+id/belgium"
        style="@style/dialogButton"
        android:text="@string/belgium" />

    <Button
        android:id="@+id/bulgaria"
        style="@style/dialogButton"
        android:text="@string/bulgaria" />

    <Button
        android:id="@+id/czech"
        style="@style/dialogButton"
        android:text="@string/czech" />

    <Button
        android:id="@+id/england"
        style="@style/dialogButton"
        android:text="@string/england" />

    <Button
        android:id="@+id/germany"
        style="@style/dialogButton"
        android:text="@string/germany" />

</LinearLayout>
